--- a/style/css/no-styles.css
+++ b/style/css/no-styles.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #FBFBFB;
+    background-color: white;
 }
 
 /* Position the "No" button absolutely within body */
